Port core Forge 1.20.1 scaffolding and gameplay plumbing