@@ -1,21 +1,15 @@
 package owmii.losttrinkets.handler;
 
 import com.google.common.collect.Sets;
-import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.entity.player.ServerPlayerEntity;
-import net.minecraft.item.ItemStack;
-import net.minecraft.server.MinecraftServer;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.util.Util;
-import net.minecraft.util.WeightedRandom;
-import net.minecraft.util.text.ChatType;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.util.text.TextFormatting;
-import net.minecraft.util.text.TranslationTextComponent;
-import net.minecraft.util.text.event.HoverEvent;
-import net.minecraftforge.fml.server.ServerLifecycleHooks;
+import net.minecraft.ChatFormatting;
+import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.HoverEvent;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.world.entity.player.Player;
+import net.minecraft.world.item.ItemStack;
 import net.minecraftforge.registries.ForgeRegistries;
-import owmii.lib.util.Server;
 import owmii.losttrinkets.LostTrinkets;
 import owmii.losttrinkets.api.LostTrinketsAPI;
 import owmii.losttrinkets.api.player.PlayerData;
@@ -29,7 +23,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -46,8 +39,8 @@ public class UnlockManager {
     private static final List<WeightedTrinket> WEIGHTED_TRINKETS = new ArrayList<>();
 
     @Nullable
-    public static ITrinket unlock(PlayerEntity player, boolean checkDelay) {
-        if (player instanceof ServerPlayerEntity) {
+    public static ITrinket unlock(Player player, boolean checkDelay) {
+        if (player instanceof ServerPlayer) {
             PlayerData data = LostTrinketsAPI.getData(player);
             if (!checkDelay || data.unlockDelay <= 0) {
                 Trinkets trinkets = LostTrinketsAPI.getTrinkets(player);
@@ -55,21 +48,24 @@ public class UnlockManager {
                 WEIGHTED_TRINKETS.addAll(RANDOM_TRINKETS.stream()
                         .filter(trinket -> !trinkets.has(trinket))
                         .map(WeightedTrinket::new)
-                        .collect(Collectors.toList()));
+                        .toList());
                 if (!WEIGHTED_TRINKETS.isEmpty()) {
-                    WeightedTrinket item = WeightedRandom.getRandomItem(player.world.rand, WEIGHTED_TRINKETS);
-                    unlock(player, item.trinket, checkDelay);
+                    WeightedTrinket item = getRandomWeighted(player, WEIGHTED_TRINKETS);
+                    if (item != null) {
+                        unlock(player, item.trinket, checkDelay);
+                        return item.trinket;
+                    }
                 }
             }
         }
         return null;
     }
 
-    public static boolean unlock(PlayerEntity player, ITrinket trinket, boolean checkDelay) {
+    public static boolean unlock(Player player, ITrinket trinket, boolean checkDelay) {
         return unlock(player, trinket, checkDelay, true);
     }
 
-    public static boolean unlock(PlayerEntity player, ITrinket trinket, boolean checkDelay, boolean doNotification) {
+    public static boolean unlock(Player player, ITrinket trinket, boolean checkDelay, boolean doNotification) {
         PlayerData data = LostTrinketsAPI.getData(player);
         if (!checkDelay || data.unlockDelay <= 0) {
             Trinkets trinkets = LostTrinketsAPI.getTrinkets(player);
@@ -77,13 +73,18 @@ public class UnlockManager {
                 if (checkDelay) {
                     data.unlockDelay = Configs.GENERAL.unlockCooldown.get();
                 }
-                if (doNotification) {
-                    LostTrinkets.NET.toClient(new TrinketUnlockedPacket(Objects.requireNonNull(trinket.getItem().getRegistryName()).toString()), player);
+                if (doNotification && player instanceof ServerPlayer serverPlayer) {
+                    ResourceLocation key = BuiltInRegistries.ITEM.getKey(trinket.asItem());
+                    LostTrinkets.NET.toClient(new TrinketUnlockedPacket(key.toString()), serverPlayer);
                     ItemStack stack = new ItemStack(trinket);
-                    ITextComponent trinketName = stack.getDisplayName().deepCopy().modifyStyle(style -> {
-                        return style.setHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_ITEM, new HoverEvent.ItemHover(stack)));
-                    });
-                    Server.get().getPlayerList().func_232641_a_(new TranslationTextComponent("chat.losttrinkets.unlocked.trinket", player.getDisplayName(), trinketName).mergeStyle(TextFormatting.DARK_AQUA), ChatType.SYSTEM, Util.DUMMY_UUID);
+                    Component trinketName = stack.getHoverName().copy().withStyle(style ->
+                            style.withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_ITEM, new HoverEvent.ItemStackInfo(stack))));
+                    Component message = Component.translatable(
+                            "chat.losttrinkets.unlocked.trinket",
+                            player.getDisplayName(),
+                            trinketName
+                    ).withStyle(ChatFormatting.DARK_AQUA);
+                    serverPlayer.server.getPlayerList().broadcastSystemMessage(message, false);
                 }
                 return true;
             }
@@ -91,17 +92,25 @@ public class UnlockManager {
         return false;
     }
 
-
-    static class WeightedTrinket extends WeightedRandom.Item {
-        private final ITrinket trinket;
-
-        public WeightedTrinket(ITrinket trinket) {
-            super(trinket.getRarity().getWeight());
-            this.trinket = trinket;
+    private static WeightedTrinket getRandomWeighted(Player player, List<WeightedTrinket> entries) {
+        int total = entries.stream().mapToInt(WeightedTrinket::weight).sum();
+        if (total <= 0) {
+            return null;
         }
+        int target = player.getRandom().nextInt(total);
+        int cumulative = 0;
+        for (WeightedTrinket entry : entries) {
+            cumulative += entry.weight();
+            if (target < cumulative) {
+                return entry;
+            }
+        }
+        return entries.get(entries.size() - 1);
+    }
 
-        public ITrinket getTrinket() {
-            return this.trinket;
+    private record WeightedTrinket(ITrinket trinket) {
+        int weight() {
+            return this.trinket.getRarity().getWeight();
         }
     }
 
@@ -115,7 +124,7 @@ public class UnlockManager {
         Set<ResourceLocation> seen = Sets.newLinkedHashSet();
         LOGGER.info(MARKER, "Gathering Trinkets...");
         ALL_TRINKETS.forEach(trinket -> {
-            ResourceLocation rl = trinket.asItem().getRegistryName();
+            ResourceLocation rl = BuiltInRegistries.ITEM.getKey(trinket.asItem());
             seen.add(rl);
             if (banned.contains(rl)) {
                 TRINKETS.remove(trinket);
@@ -132,22 +141,21 @@ public class UnlockManager {
                 }
             }
         });
-        // Summary
         LOGGER.info(MARKER, "All: " + ALL_TRINKETS.size());
         LOGGER.info(MARKER, "Enabled: " + TRINKETS.size() + " Disabled: " + (ALL_TRINKETS.size() - TRINKETS.size()));
         LOGGER.info(MARKER, "Random: " + RANDOM_TRINKETS.size() + " Non-Random: " + (TRINKETS.size() - RANDOM_TRINKETS.size()));
-        // Check configs
         banned.stream().filter(rl -> !seen.contains(rl))
                 .forEach(rl -> LOGGER.warn(MARKER, "Unknown Banned Trinket: " + rl));
         nonRandom.stream().filter(rl -> !seen.contains(rl))
                 .forEach(rl -> LOGGER.warn(MARKER, "Unknown Non-Random Trinket: " + rl));
         nonRandom.stream().filter(banned::contains)
                 .forEach(rl -> LOGGER.warn(MARKER, "Redundant Non-Random Trinket (already banned): " + rl));
-        // Remove banned trinkets from current players if server is running
-        MinecraftServer server = ServerLifecycleHooks.getCurrentServer();
-        if (server != null) {
-            server.runAsync(() -> Server.get().getPlayerList().getPlayers()
-                    .forEach(player -> LostTrinketsAPI.getTrinkets(player).removeDisabled(player)));
+        if (LostTrinkets.NET != null) {
+            var server = net.minecraftforge.fml.server.ServerLifecycleHooks.getCurrentServer();
+            if (server != null) {
+                server.execute(() -> server.getPlayerList().getPlayers()
+                        .forEach(player -> LostTrinketsAPI.getTrinkets(player).removeDisabled(player)));
+            }
         }
     }
 
